INCLUDES=-I$(top_srcdir)/include
noinst_LTLIBRARIES=$(top_srcdir)/lib/libcommon.la
SUBDIRS=comm daemon DevLog log sys Timer util xml
__top_srcdir__lib_libcommon_la_SOURCES=
__top_srcdir__lib_libcommon_la_LIBADD=comm/libcomm.la \
									  daemon/libdaemon.la \
									  DevLog/libdevlog.la	\
									  log/liblog.la \
									  sys/libsys.la \
									  Timer/libtimer.la \
									  util/libutil.la \
									  xml/libxml.la
